--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,14 +3,64 @@
    padding: 0;
    box-sizing: border-box;
 }
+/*shared style*/
 .font-open-sans {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
 }
 
+.logo h2{
+    font-size: 45px;
+    font-weight: 900;
+}
+.color-orange{
+    color: #FD6E0A;  
+}
+
+/*btn = button*/
+.btn{
+    background-color: #FD6E0A;
+    font-size: 20;
+    border: none;
+    padding: 18px 36px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #FFFFFF;
+
+
+}
+
+/*main style*/
 body{
     background-color: aqua;
 }
 header{
-    background-color: azure;
+    background-color: #FFF8F3;
+    padding-top: 50px;
+}
+
+nav{
+    width: 71%;
+    max-width: 1140px;
+    /* border: 1px solid darkred; */
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between ;
+    align-items: center;
+}
+
+nav .menu{
+    display: flex;
+    list-style-type: none;
+    gap: 51px;
+    font-size: 20px;
+    color: #474747;
+    align-items: center;
+}
+
+nav .menu a{
+    font-size: 20px;
+    color: #474747;
+    text-decoration: none;
 }
