--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,16 +27,19 @@
     font-size: 20px;
     font-weight: bold;
     color: #FFFFFF;
-
-
+    cursor: pointer;
 }
 
 /*main style*/
-body{
+/* body{
     background-color: aqua;
-}
+} */
+
 header{
     background-color: #FFF8F3;
+    background: url(../images/developer.png),url(../images/header_bg.png),#FFF8F3 ;
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
     padding-top: 50px;
 }
 
@@ -63,4 +66,42 @@ nav .menu a{
     font-size: 20px;
     color: #474747;
     text-decoration: none;
+}
+
+#banner{
+    /* border: 1px solid red; */
+    margin: 47px 38px 0px 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#banner .banner-content{
+    max-width: 585px;
+}
+
+#banner .banner-content h2{
+    font-size: 45px;
+    color: #474747;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+#banner .banner-content h1{
+    font-size: 85px;
+    color: #181818;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+#banner .banner-content p{
+    font-size: 18px;
+    color: #757575;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+#banner .banner-image img{
+    max-width: 585px;
+    vertical-align: middle;
 }
