--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -30,6 +30,25 @@
     cursor: pointer;
 }
 
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+}
+
+.section-heading h2{
+    font-size: 35px;
+    margin-bottom: 30px;
+    color: #181818;
+}
+
+.section-heading p{
+    font-size: 18px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+}
+
+
 /*main style*/
 /* body{
     background-color: aqua;
@@ -104,4 +123,37 @@ nav .menu a{
 #banner .banner-image img{
     max-width: 585px;
     vertical-align: middle;
+}
+
+#about{
+    border: 1px solid red;
+    padding-top: 130px;
+}
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    background-color: #FFF8F3;
+    text-align: center;
+    padding: 131px 157px;
+}
+
+#about .about-container .about-info{
+    border: 1px solid red;
+    width: 782px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info .info-card p{
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+    font-weight: 400;
+}
+
+.about-info .info-card h4{
+    font-size: 20px;
+    color: #474747;
+    font-weight: bold;
 }
