--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,7 @@
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 }
 
 .section-heading h2{
@@ -126,7 +127,6 @@ nav .menu a{
 }
 
 #about{
-    border: 1px solid red;
     padding-top: 130px;
 }
 #about .about-container{
@@ -139,7 +139,6 @@ nav .menu a{
 }
 
 #about .about-container .about-info{
-    border: 1px solid red;
     width: 782px;
     display: flex;
     justify-content: space-around;
@@ -157,3 +156,48 @@ nav .menu a{
     color: #474747;
     font-weight: bold;
 }
+/* border: 1px solid red; */
+
+#skills{
+    /* border: 1px solid red; */
+    padding-top: 130px;
+}
+
+#skills .skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+#skills .skills-container .skill-box{
+    display: flex;
+    gap: 24px;
+}
+
+.skill-box .skill-cards{
+    padding: 30px;
+    /* border: 1px solid red; */
+    max-width: 267px;
+    box-shadow: 0 6px 50px 0 #0000003b;
+}
+
+.skill-cards img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+
+.skill-cards h3{
+    font-size: 20px;
+    color: #181818;
+    max-width: 174px;
+    margin-bottom: 20px;
+}
+
+.skill-cards p{
+    font-size: 16px;
+    color: #757575;
+    line-height: 28px;
+}
+
+
+
